# Document_Processing

./: README.md
Document_Processing_neural_network/: CMakeLists.txt
Document_Processing_neural_network/src/cuda/: blas.cpp  blas.hpp  conv.cpp  conv.hpp  cuda_to_omp.txt  flatten.cpp  flatten.hpp  layer.hpp  linear.cpp  linear.hpp  max_pool.cpp  max_pool.hpp  nll_loss.cpp  nll_loss.hpp  optimizer.hpp  relu.cpp  relu.hpp  rmsprop.cpp  rmsprop.hpp  sigmoid.cpp  sigmoid.hpp  softmax.cpp  softmax.hpp  storage.cpp  storage.hpp  utils.hpp
Document_Processing_neural_network/src/mnist/: dataset.cpp  dataset.hpp  main.cpp  mnist.cpp  mnist.hpp
